[package]
name = "i3x-o1"
version = "0.1.0"
edition = "2021"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
description = "An internal CLI tool for building, serving, and deploying the I3M Developer Docs internally for IThreeM Company."
license = "MIT"
keywords = ["dfx", "ICP", "IThreeM", "I3M", "deployment"]
readme = "README.md"
categories = ["game-development"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
